fix: Added Z-index property

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -40,8 +40,11 @@
 
 .addButtonWrapper {
   position: absolute;
-  top: 1em;
-  right: 1em;
+
+  top: 0.875em;
+  right: 0.875em;
+
+  z-index: 10;
 }
 
 .addButton {
@@ -73,6 +76,8 @@
 
   top: 0.875em;
   left: 0.875em;
+
+  z-index: 10;
 }
 
 .swapButton {
